# simple_yfinance_etl

./: .gitignore  etl.py  pyproject.toml
csv_database/: msft.csv
